@@ -1,6 +1,9 @@
 LIST OF CHANGES
 ---------------
 
+ - Study class updated following the addition of the
+   contaminated_human_data_access_group column to the study table.
+
 release 6.32.0 (2024-07-25)
  - add seq_product_irods_locations relationship to IseqProductMetric
 
